bynkc/tests/fixtures/positive/02_refined_int_nonnegative/input.bynk
commons demo {
  type Metres = Int where NonNegative
}
