bynkc/tests/fixtures/negative/208_bearer_identity_not_string/src/demo.bynk
context demo

type Age = Int where NonNegative

actor User { auth = Bearer(secret = "JWT_KEY"), identity = Age }
